array.island.Island.scala.error
Erreur de compilation :
Island:2: error: missing argument list for method island in class Island
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `island _` or `island(_)` instead of `island`.
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                  ^Island:2: error: type mismatch;
 found   : Int
 required: Array[Int]
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                  ^Island:2: error: not found: value &&
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                        ^Island:2: error: type mismatch;
 found   : Int
 required: Array[Int]
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                                   ^Island:2: error: type mismatch;
 found   : Int
 required: Array[Int]
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                                              ^Island:2: error: not found: value b
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                                                     ^Island:2: error: not found: value b
def island(num:Array[Int]): Int = {var count:Int = 0; var a:Int = island.size(); for (i<- 1 to a-1 ) {if (!island(i)==0)&&(island(i+1)-island(i)>0) {b = b +1}}; return b
                                                                                                                                                                        ^